Fix some caps leaks when creating pad templates

https://bugzilla.gnome.org/show_bug.cgi?id=776700